Inmob-Salesforce/force-app/main/default/objects/Ciudad__c/Ciudad__c.object-meta.xml
<CustomObject>
    <label>Ciudad</label>
    <nameField>
        <label>Código</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ciudades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>