Inmob-Salesforce/force-app/main/default/objects/Ciudad__c/fields/CI_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>CI_Descripcion__c</fullName>
    <label>Descripción</label>
    <length>50</length>
    <type>Text</type>
</CustomField>