Inmob-Salesforce/force-app/main/default/objects/Ciudad__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CI_Descripcion__c</columns>
    <columns>CI_Pais__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>